Fixed some align stuff of the grid and fixed mobile loading screen(ps. Loading screen needs to be fixed in the mid in next update

--- a/Css/master.css
+++ b/Css/master.css
@@ -11,6 +11,10 @@ html, body {
   background-color: #d5506b;
 }
 
+body {
+  height: 100vh;
+}
+
 /* Loading screen start */
 .loading {
   grid-column: 1 / 6;
@@ -19,7 +23,6 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  background-color: black;
   opacity: 90%;
   z-index: 20;
   animation-name: loading-screen;
@@ -33,7 +36,7 @@ html, body {
 
 @keyframes loading-screen {
   0% {
-    width: 100vw;
+    width: 100%;
     background-color: black;
     opacity: 100%;
     /* Standard compliant browsers */
@@ -46,6 +49,7 @@ html, body {
   }
 
   90% {
+    width: 100%;
     opacity: 98%;
     /* Standard compliant browsers */
     -moz-opacity: 98%;
@@ -65,11 +69,11 @@ html, body {
     /* WebKit browser e.g. Safari */
     filter: alpha(opacity=90);
     /* For IE8 and earlier */
-    width: 100vw;
     background-color: black;
   }
 
   100% {
+    width: 0%;
     opacity: 0%;
     /* Standard compliant browsers */
     -moz-opacity: 0%;
@@ -78,7 +82,6 @@ html, body {
     /* WebKit browser e.g. Safari */
     filter: alpha(opacity=0);
     /* For IE8 and earlier */
-    width: 0vw;
     background-color: white;
   }
 }
@@ -131,11 +134,11 @@ html, body {
   }
 
   95% {
-    transform: rotate(360deg);
+    transform: rotate(530deg);
   }
 
   100% {
-    transform: rotate(360deg);
+    transform: rotate(450deg);
     background-color: black;
     border: 5px solid black;
   }
@@ -246,6 +249,68 @@ html, body {
   100% {
     margin-top: 0px;
     height: 400px;
+  }
+}
+
+.loading-background {
+  grid-column: 1 / 6;
+  grid-row: 1 / 3;
+  height: 200vh;
+  width: 100%;
+  background-color: black;
+  z-index: 15;
+  animation-name: loading-screen-background;
+  animation-duration: 6s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes loading-screen-background {
+  0% {
+    width: 100% background-color: black;
+    opacity: 100%;
+    /* Standard compliant browsers */
+    -moz-opacity: 100%;
+    /* Firefox and Mozilla browsers */
+    -webkit-opacity: 100%;
+    /* WebKit browser e.g. Safari */
+    filter: alpha(opacity=100);
+    /* For IE8 and earlier */
+  }
+
+  90% {
+    opacity: 98%;
+    /* Standard compliant browsers */
+    -moz-opacity: 98%;
+    /* Firefox and Mozilla browsers */
+    -webkit-opacity: 98%;
+    /* WebKit browser e.g. Safari */
+    filter: alpha(opacity=98);
+    /* For IE8 and earlier */
+  }
+
+  95% {
+    width: 100% opacity: 90%;
+    /* Standard compliant browsers */
+    -moz-opacity: 90%;
+    /* Firefox and Mozilla browsers */
+    -webkit-opacity: 90%;
+    /* WebKit browser e.g. Safari */
+    filter: alpha(opacity=90);
+    /* For IE8 and earlier */
+    background-color: black;
+  }
+
+  100% {
+    width: 0% opacity: 0%;
+    /* Standard compliant browsers */
+    -moz-opacity: 0%;
+    /* Firefox and Mozilla browsers */
+    -webkit-opacity: 0%;
+    /* WebKit browser e.g. Safari */
+    filter: alpha(opacity=0);
+    /* For IE8 and earlier */
+    background-color: white;
   }
 }
 
@@ -663,8 +728,7 @@ header {
   /* Changed to mobile layout */
   .grid {
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 100vh 90vh;
-    grid-row-gap: 100px;
+    grid-template-rows: 100vh 100vh;
   }
 
   .left-box {
@@ -674,11 +738,13 @@ header {
   }
 
   .right-box {
-    margin-top: 20%;
     width: 30%;
-    margin-bottom: 80px;
     grid-row: 2 / 2;
     grid-column: 1 / 6;
+  }
+
+  body {
+    height: 200vh;
   }
 
   @keyframes divider1 {
@@ -854,10 +920,6 @@ header {
 @media (max-width: 350px) {
 
   /* Preview resize */
-  .portfolio-prevw-heading {
-    margin-bottom: 200px;
-  }
-
   .prev1 {
     width: 80px;
     height: 120px;
